--- a/PeriodCalculator/appsettings.json
+++ b/PeriodCalculator/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MusicConnection":"Server=tcp:musicdatabase19.database.windows.net,1433;Initial Catalog=musicdb;User ID=shivsh2019;Password=livelaughhope02@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "MusicConnection":"Server=tcp:musicdatabase19.database.windows.net,1433;Initial Catalog=musicdb;User ID=shivsh2019;Password=a;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   }
   //"MusicConnection\": \"\\\"server=sqlinux;database=Music;user id=sa;password=reallyStrongPwd123\"": null,
